// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardView component should render correctly 1`] = `
<div
  className="abc"
>
  <Styled(Row)
    fullBleed={true}
  />
</div>
`;

exports[`CardView component should renders correctly when Card are not present 1`] = `
<div>
  <Styled(Row)
    fullBleed={true}
  />
</div>
`;
